--- a/packages/foundry/foundry.toml
+++ b/packages/foundry/foundry.toml
@@ -3,7 +3,8 @@ src = 'contracts'
 out = 'out'
 libs = ['lib']
 fs_permissions = [{ access = "read-write", path = "./"}]
-
+keystores = ["~/.foundry/keystores"]
+password_file = ".password"
 
 [rpc_endpoints]
 default_network = "http://127.0.0.1:8545"
