--- a/dapp/foundry.toml
+++ b/dapp/foundry.toml
@@ -2,5 +2,12 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.28"
+remappings = ["@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[profile.default.fuzz]
+runs = 256
+
+[profile.default.invariant]
+runs = 256
+depth = 64
