--- a/dapp/.env.example
+++ b/dapp/.env.example
@@ -1,4 +1,8 @@
 BASE_RPC_URL=
 BASE_SEPOLIA_RPC_URL=
 PRIVATE_KEY=
-BATTLE_FACTORY_ADDRESS=
+
+BATTLE_FACTORY_ADDRESS=0x66aE42c5CE20F4981EF03d2d2A5D1f3318CA65FA
+
+# forge script script/DeployBattleFactory.s.sol --rpc-url baseSepolia --broadcast --chain-id 84531 -vvvv
+# forge script script/DeployBattleFactory.s.sol --rpc-url base --broadcast --chain-id 8453 -vvvv
