chore: Update .env.example

--- a/dapp/.env.example
+++ b/dapp/.env.example
@@ -1,5 +1,5 @@
-BASE_RPC_URL=
-BASE_SEPOLIA_RPC_URL=
+BASE_RPC_URL=https://base-mainnet.nodit.io/LtqDakoq6BWxl5cD4dW6FqSprqw0ghuh
+BASE_SEPOLIA_RPC_URL=https://base-sepolia.nodit.io/LtqDakoq6BWxl5cD4dW6FqSprqw0ghuh
 PRIVATE_KEY=
 
 BATTLE_FACTORY_ADDRESS=0x66aE42c5CE20F4981EF03d2d2A5D1f3318CA65FA
