--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "viem": "2.x",
