--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -13,3 +13,8 @@ NEXT_PUBLIC_ENVIRONMENT=development
 NEXT_PUBLIC_CHAIN_ID=84531
 
 NEXT_PUBLIC_BATTLE_FACTORY_ADDRESS=0x66aE42c5CE20F4981EF03d2d2A5D1f3318CA65FA
+
+# mainnet | testnet | local
+NEXT_PUBLIC_NETWORK="testnet"
+
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=ed7222f5f2f5b0d1a2e8361459bb1056
