Feat: push to swap_final

--- a/dapp/foundry.toml
+++ b/dapp/foundry.toml
@@ -15,3 +15,4 @@ depth = 64
 [rpc_endpoints]
 base = "${BASE_RPC_URL}"
 baseSepolia = "${BASE_SEPOLIA_RPC_URL}"
+localBase = "${LOCAL_BASE_RPC_URL}"
